--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -1006,6 +1006,20 @@ button {
     display: none;
 }
 
+
+/* Communities section */
+.blocker-page-community {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    content: ' ';
+    display: none;
+
+    /* background: rgba(0, 0, 0, .5); */
+}
+
 /* Media Queries */
 
 
