--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/home_timeline.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/home_timeline.html
@@ -68,123 +68,8 @@ Page3 Homepage
                         {% if not post.is_reply %}
                         <div class="infinite-item">
                             <div value="{{ post.id }}">
-                                <li class="post">
-                                    <div>
-                                        <div class="post-category-section">
-                                            <!-- <i class="fa-solid fa-globe"></i> -->
-                                            <i class="fa-solid fa-puzzle-piece"></i>
-                                            <!-- <span class="material-icons post-topic-icon">&#xf1c8;</span> -->
-                                            <a class="post-category">
-                                                {{post.category}}</a>
-                                            {{post.id}}
-                                        </div>
+                                {% include 'post_element_home_timeline.html' %}
 
-                                        <section class="post-top-part">
-                                            <div class="profile-pic">
-                                                {%if post.user_profile.profile_pic.name %}
-                                                <a href="{%url 'posts-by-user' post.author%}"><img
-                                                        src="{{ post.user_profile.profile_pic.url }}" width="500"></a>
-                                                {% endif %}
-                                                <!-- <img src="{{ post.user_profile.profile_pic.url }}" width="500"> -->
-                                            </div>
-
-                                            <span class="post-header">{{post.author}} <span class="date">
-                                                    {{post.post_date}}
-                                                </span> </span>
-
-                                            <span class="post-options-button" value="{{post.id}}">
-
-                                                <div class="post-options-list " id="post-options-list"
-                                                    value="{{post.id}}">
-                                                    <div class="blocker" id="blocker" value="{{post.id}}"></div>
-                                                    <div class="post-options-list-items">
-                                                        <button id="post-options-list-close" value="{{post.id}}"><i
-                                                                class="fa-solid fa-xmark"></i></button>
-                                                        <ul>
-                                                            {% if user.is_authenticated %}
-                                                            {% if user.id == post.author.id %}
-
-                                                            <li><a href="{% url 'delete-post' post.pk %}">Delete</a>
-                                                            </li>
-                                                            <!-- <button id="like-button" value="{{ post.pk }}">Like</button> -->
-                                                            {% endif %}
-                                                            {% endif %}
-
-                                                            <li>Add to favorites</li>
-                                                            <li>Share</li>
-                                                            <li>Follow @{{post.author}}</li>
-                                                            <li>Block @{{post.author}}</li>
-                                                            <li>Report post</li>
-                                                        </ul>
-                                                    </div>
-
-                                                </div>
-                                                <i class="fa-solid fa-ellipsis-vertical" id="three-dots"
-                                                    value="{{post.id}}"></i>
-                                            </span>
-
-                                        </section>
-                                        <a class="post-title" onclick="storeScroll()"
-                                            href="{% url 'upload_reply' post.pk %}">
-                                            {{post.body|safe}}</a>
-                                        <div class="post-tags">
-                                            {%for t in post.get_Tag%}
-                                            {{t}}
-                                            {%endfor%}
-                                        </div>
-
-
-
-
-                                        {% if post.image1 %}
-                                        <img src="{{ post.image1.url}}" width="500">
-                                        {% endif %}
-
-
-                                        <div class="images">
-                                            {% if post.has_images %}
-
-                                            {% for image in image_list %}
-                                            {% if image.post.id == post.id %}
-                                            <img src="{{ image.image.url}}">
-                                            {% endif %}
-                                            {% endfor %}
-                                            {{ post.imagefiles}}
-                                            {% endif %}
-                                        </div>
-                                        {% if post.video %}
-                                        <video class="post-video" width="500" controls autoplay>
-                                            <source src="{{post.video.url}}" type="video/mp4">
-                                        </video>
-
-                                        <!-- <a href="{{post.video.url}}">Link</a> -->
-
-                                        {% endif %}
-                                        <br />
-
-                                        <!-- {{ post.likes.count }} likes
-                                {{ post.liked_by }} -->
-
-
-
-                                        {% if user.is_authenticated %}
-
-                                        <!-- <span id="like_count" type="hidden">{{ post.like_count}}</span> -->
-                                        <div class="post-interact"></div>
-                                        <button id="like-button" class="like-button" name="{{ post.like_count }}"
-                                            value="{{ post.id }}">{{post.like_count}}<i class="fa-solid fa-heart"></i>
-                                        </button>
-
-
-                                        <a class="reply-button" href="{% url 'upload_reply' post.pk %}"
-                                            onclick="storeScroll()">
-                                            {{post.reply_count}}<i class="fa-solid fa-comment"></i></a>
-
-                                        {% endif %}
-
-
-                                    </div>
-                                </li>
                             </div>
                         </div>
                         {% endif %}
@@ -206,11 +91,7 @@ Page3 Homepage
 
 <script>
 
-    function updateText(btn, no_of_likes) {
-        console.log(btn)
-        //btn.element.innerHTML = "LIKED BY" + " " + no_of_likes + "lkl"
-        btn.text("LIKED BY" + " " + no_of_likes)
-    }
+
     $(document).on('click', '#like-button', function (e) {
         e.preventDefault();
 
@@ -334,8 +215,10 @@ Page3 Homepage
                     no_of_likes = json['result'];
                     //console.log(json)
                     //updateText(allLikes[i], no_of_likes)
-                    allLikes[i].innerHTML = "LIKED BY" + " " + no_of_likes
-                    console.log("AJAX LIKES UPDATE REQUEST")
+                    //allLikes[i].innerHTML = "LIKED BY" + " " + no_of_likes
+                    //console.log("AJAX LIKES UPDATE REQUEST")
+
+                    updateText(allLikes[i], no_of_likes)
                 },
                 error: function (response) {
 
