--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_list.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_list.html
@@ -2,93 +2,42 @@
 
 {% block content %}
 
-
-
-
-
-
-
-
 <br />
 
 
 {% if replies_to_post %}
 
 
-{% for reply in replies_to_post %}
+{% for post in replies_to_post %}
 <div class="post">
 
+    {% include 'post_content_section.html' %}
 
-    <section class="post-top-part">
-        <div class="profile-pic">
-            {%if reply.user_profile.profile_pic.name %}
-            <img src="{{ reply.user_profile.profile_pic.url }}" width="500">
-            {% endif %}
-            <!-- <img src="{{ post.user_profile.profile_pic.url }}" width="500"> -->
-        </div>
-
-        <span class="post-header">
-            {{reply.author}}
-            <span class="date">
-                {{reply.post_date}}
-            </span>
-        </span>
-    </section>
-
-    {% if replyingToIsReply %}
-    <p>@{{replyingToAuthor}} </p>
-    {% endif %}
-
-    {{ reply.author}} | {{reply.pk}} | {{reply.post_datetime}}<br />
-
-    {% if user.id == reply.author.id %}
-    <a href="{% url 'delete-post' reply.pk %}">Delete</a>
-    {% endif %}
-    <br />
-    {{ reply.body|safe}}
-
-    <br />
-
-    {% if reply.video %}
-    <video width="500" controls autoplay>
-
-        <source src="{{reply.video.url}}" type="video/mp4">
-    </video>
-
-    {% endif %}
-
-    {% if reply.has_images %}
-
-    {% for image in image_list %}
-    {% if image.post.id == reply.id %}
-    <img src="{{ image.image.url}}" width="500">
-    {% endif %}
-    {% endfor %}
-
-
-    {% endif %}
-
+    <!--  -->
 
     {% if user.profile.id %}
 
-    <button id="like-button" class="like-button" name="{{ reply.like_count }}" value="{{ reply.pk }}">LIKED BY
-        {{reply.like_count}}</button>
+    <button id="like-button" class="like-button" name="{{ post.like_count }}"
+        value="{{ post.id }}">{{post.like_count}}<i class="fa-solid fa-heart"></i>
+    </button>
+
+    <button id="open-reply-modal" class="reply-button" value="{{post.pk}}">{{post.reply_count}}<i
+            class="fa-solid fa-comment"></i></button>
 
 
-    <button id="open-reply-modal" value="{{reply.pk}}"> Reply</button>
 
     {% endif %}
 
     {% if show_replies_button %}
-    {% if reply.reply_count > 0 %}
+    {% if post.reply_count > 0 %}
 
-    {% if reply.reply_count == 1 %}
-    <button class="show-replies-btn" id="show-replies" value="{{reply.pk}}"
+    {% if post.reply_count == 1 %}
+    <button class="show-replies-btn" id="show-replies" value="{{post.pk}}"
         onclick="this.innerHTML=toggleReplies(this.innerHTML)">Show Reply</button>
     {% else %}
 
-    <button class="show-replies-btn" id="show-replies" value="{{reply.pk}}"
-        onclick="this.innerHTML=toggleReplies(this.innerHTML)">Show {{ reply.reply_count }} Replies</button>
+    <button class="show-replies-btn" id="show-replies" value="{{post.pk}}"
+        onclick="this.innerHTML=toggleReplies(this.innerHTML)">Show {{ post.reply_count }} Replies</button>
     {% endif %}
 
 
@@ -99,10 +48,7 @@
 
     {% else %}
     {% endif %}
-
-
-    <!-- <a href="{% url 'upload_reply' reply.pk %}">Reply</a> -->
-    <div class="replies-holder" id="replies-holder" value="{{reply.pk}}" style="display: none;">
+    <div class="replies-holder" id="replies-holder" value="{{post.pk}}" style="display: none;">
 
     </div>
 
