added community posts timeline

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_list.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_list.html
@@ -11,7 +11,7 @@
 {% for post in replies_to_post %}
 <div class="post">
 
-    {% include 'post_content_section.html' %}
+    {% include 'post/postElement/post_content_section.html' %}
 
     <!--  -->
 
