--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_page.html
@@ -13,7 +13,7 @@ Page3 - Add reply
     <div class="page-contents">
         <div class="sidebar" style="visibility: hidden !important;"></div>
         <div class="posts-timeline">
-            {% include 'post_element_replies.html' %}
+            {% include 'post/postElement/post_element_replies.html' %}
             <div id="replies-section">
                 {% include 'replies_list.html' %}
             </div>
