--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_home_timeline.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_home_timeline.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="post">
     <div>
-        {% include 'post_content_section.html' %}
+        {% include 'post/postElement/post_content_section.html' %}
 
         {% if user.is_authenticated %}
 
