--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="post">
     <div>
-        {% include 'post_content_section.html' %}
+        {% include 'post/postElement/post_content_section.html' %}
 
 
 
@@ -28,8 +28,11 @@
         <!-- 
         <a class="reply-button" href="{% url 'upload_reply' post.pk %}" onclick="storeScroll()">
             {{post.reply_count}}<i class="fa-solid fa-comment"></i></a> -->
+        {%if post.user_profile %}
+        {{post.user_profile}}
         <button id="open-reply-modal" class="reply-button" value="{{post.pk}}">{{post.reply_count}}<i
                 class="fa-solid fa-comment"></i></button>
+        {%endif %}
         {% endif %}
 
 
