--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navbar-top.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navbar-top.html
@@ -72,7 +72,8 @@
 
         {% else %}
         <li><a href="{% url 'register' %}">Register</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
+        <!-- <li><a href="{% url 'login' %}">Login</a></li> -->
+        <li><a href="{% url 'login-user' %}">Login</a></li>
         {% endif %}
 
         <li>
