--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post.html
@@ -1,19 +1,20 @@
 {% extends 'base/base.html' %}
-{% load static %}
 {% block title %}
-Page3 - Add Profile Page
+Page3 - Add post
 {% endblock title %}
 
 {% block content %}
-<br />
+{% load crispy_forms_tags %}
 {% if user.is_authenticated %}
-{{ user }}
 <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
     <button type="submit">Post</button>
 </form>
-{% endif %}
 
+
+{% else %}
+Login first!
+{% endif %}
 {% endblock content %}
