--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
@@ -14,7 +14,7 @@
         <div class="reply-modal-container" id="reply-modal-container">
             <div class="modal-div">
                 <h1>reply to</h1>
-                {% include 'post_replies_form.html' %}
+                {% include 'post/post_replies_form.html' %}
                 <button id="close-modal">CLose modal</button>
             </div>
         </div>
