--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/create_community.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/create_community.html
@@ -1,19 +1,23 @@
 {% extends 'base/base.html' %}
-{% load static %}
 {% block title %}
-Page3 - Add Profile Page
+Page3 - Create Community
 {% endblock title %}
 
 {% block content %}
-<br />
+{% load crispy_forms_tags %}
+{{user}}
+{{message}}
 {% if user.is_authenticated %}
-{{ user }}
+
 <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
-    <button type="submit">Post</button>
+    <button type="submit">Submit</button>
 </form>
-{% endif %}
 
+
+{% else %}
+Login first!
+{% endif %}
 {% endblock content %}
