--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/replies/replies_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/replies/replies_page.html
@@ -8,8 +8,10 @@ Page3 - Add reply
 {% load crispy_forms_tags %}
 
 
-
+{% include 'navigation/navbar-top.html' %}
 <div class="main-body">
+
+    {% include 'navigation/sidebar-left.html' %}
     <div class="page-contents">
         <div class="sidebar" style="visibility: hidden !important;"></div>
         <div class="posts-timeline">
