Fixed community header css

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
@@ -14,11 +14,11 @@ Page3 - Community
 
     <div class="page-contents">
 
-        <!-- <div class="sidebar">
+        <div class="sidebar">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit doloribus ipsa, vel suscipit
             omnis quas cumque magnam deserunt accusamus neque tempora iusto, repellat cupiditate saepe totam sit natus,
             alias fuga.
-        </div> -->
+        </div>
         <div class="posts-timeline">
 
             <br /><br /><br />
