--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -1029,20 +1029,23 @@ button {
 
 .community-header {
     background-color: var(--post_bg_color);
-    width: 100vw;
+    width: 100%;
 
     position: relative;
     top: 65px;
 }
 
 .community-header-img {
-    display: block;
+    /* display: block; */
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 
 }
 
 .community-header-profile {
     margin: auto;
-    width: 50%;
+    width: 100%;
     border: 3px solid green;
     padding: 10px;
 }
