--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_header.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_header.html
@@ -15,7 +15,7 @@
         <img class="community-header-img" src=" {% static 'PostIT/images/profilepic.jpg' %}">
         {% endif %}
         <br />
-        {{community.name}}
+        <div class="community-name">{{ community.name }}</div>
 
     </div>
 
