--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
@@ -14,20 +14,16 @@ Page3 - Community
 
     <div class="page-contents">
 
-        <div class="sidebar">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit doloribus ipsa, vel suscipit
-            omnis quas cumque magnam deserunt accusamus neque tempora iusto, repellat cupiditate saepe totam sit natus,
-            alias fuga.
-        </div>
+
         <div class="posts-timeline">
 
-            <br /><br /><br />
+            <!-- <br /><br /><br />
 
             {{user}}
-            {{message}}
+            {{message}} -->
             {% if user.is_authenticated %}
 
-            {{ community }}
+
 
 
             <div class="blocker-page-community" id="blocker-page-community"></div>
@@ -56,6 +52,12 @@ Page3 - Community
                 </div>
 
             </ul>
+        </div>
+
+        <div class="sidebar">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit doloribus ipsa, vel suscipit
+            omnis quas cumque magnam deserunt accusamus neque tempora iusto, repellat cupiditate saepe totam sit natus,
+            alias fuga.
         </div>
     </div>
 </div>
