--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/matchmaking/matchmaking.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/matchmaking/matchmaking.html
@@ -40,7 +40,7 @@ Create Gamer Profile
 
 
     <div class="profiles-section">
-        {%include 'matchmaking_found_list.html' %}
+        {%include 'matchmaking/matchmaking_found_list.html' %}
     </div>
 
     {% else %}
