--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base/home_timeline.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base/home_timeline.html
@@ -19,38 +19,7 @@ Page3 Homepage
 
         <div class="page-contents">
 
-            <div class="sidebar">
-                Logged in as {{ user.username }}
-                {%for game_profile in game_profiles%}
-                {%if game_profile.user == user%}
-                <div class="gamer_profile">
-                    <p>{{game_profile.game}}</p>
-                    <p>{{game_profile.rank}}</p>
-                    <p>Location: {{game_profile.server}}</p>
-                </div>
-                <div class="matchmaking">
-                    <a href="{% url 'matchmaking-home' user%}">Matchmaking</a>
-                </div>
-                {%endif%}
-                {%endfor%}
-                {% if user.is_authenticated %}
-                <a href="{% url 'create-gamer-profile' user.username %}">Create Gamer Profile</a>
-                {%endif%}
-                LAST VIEWED: {{ last_viewed }}<br />
-                <hr>
-                <br>
-                <h2>What's happening</h2><br />
-                <div class="article">
-                    <div class="article-category">News</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, numquam?</p>
-                </div>
-                <div class="article">
-                    <div class="article-category">News</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, numquam?</p>
-                </div>
-                {% include 'community/communities.html' %}
 
-            </div>
 
             <div class="posts-timeline">
                 <ul>
@@ -75,6 +44,8 @@ Page3 Homepage
 
                 </ul>
             </div>
+
+            {% include 'navigation/sidebar.html' %}
         </div>
         <br />
 
