--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -409,6 +409,7 @@ i:hover {
     background-color: var(--post_bg_color);
     border-radius: 10px;
     height: 100%;
+    z-index: 10000;
     /* size: 100%; */
 
 }
@@ -425,7 +426,7 @@ i:hover {
 
 .bottom-sidebar {
     position: absolute;
-    bottom: 10px;
+    bottom: 70px;
     /* padding-bottom: 50px; */
     padding: 10px 10px 50px 10px;
 }
@@ -551,6 +552,7 @@ i:hover {
 }
 
 
+
 .main-body {
 
     background-color: var(--bg_color);
@@ -561,7 +563,7 @@ i:hover {
 }
 
 .posts-timeline {
-    min-width: fit-content;
+    /* min-width: fit-content; */
     width: 100%;
 }
 
@@ -805,7 +807,8 @@ p::-webkit-scrollbar {
     display: flex;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 100px;
+    position: relative;
     /* justify-content: center; */
 
 
@@ -822,16 +825,18 @@ p::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     background-color: var(--post_bg_color);
-    min-height: 600px;
-    width: 300px;
-    overflow: hidden;
+    min-height: 700px;
+    width: 500px;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 10px;
-    /* border: 1px solid var(--grey_color); */
+    margin-top: ;
     border-radius: 10px;
-    position: fixed;
-    top: 90px;
-    left: 1500px;
+    max-height: 800px;
+    position: sticky;
+    top: 100px;
     z-index: 990;
+
 }
 
 .sidebar .article {
@@ -858,6 +863,29 @@ p::-webkit-scrollbar {
     border-bottom: 1px solid var(--grey_color);
     margin: 5px;
     overflow: hidden;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    display: none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary_color);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--primary_color);
 }
 
 .article::-webkit-scrollbar {
@@ -1027,6 +1055,69 @@ button {
     /* background: rgba(0, 0, 0, .5); */
 }
 
+.communities-section-sidebar {
+    border-radius: 10px;
+    background-color: var(--secondary_bg_color);
+}
+
+.communities-section-sidebar:hover {
+    box-shadow: 0 2px 4px 0 rgba(212, 110, 212, 0.2), 0 3px 10px 0 rgba(212, 110, 212, 0.2);
+}
+
+.communities-section-sidebar-header {
+    padding: 10px;
+    /* background-color: var(--primary_color); */
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.communities-section-sidebar table tr td {
+    padding: 5px;
+}
+
+.communities-section-sidebar button {
+    background-color: var(--primary_color);
+    width: 300px;
+    border-radius: 50px;
+    padding: 7px;
+    font-size: small;
+    margin-bottom: 10px;
+}
+
+.community-name-sidebar {
+    float: left;
+    margin-top: 10px;
+    font-size: medium;
+}
+
+.community-name-sidebar :hover {
+    /* text-decoration: none; */
+    color: var(--primary_color);
+}
+
+
+.community-table-sidebar {
+    margin: 5px;
+}
+
+.community-profile-pic-sidebar img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.community-item-sidebar button {
+    background-color: var(--primary_color);
+    width: 80px;
+    border-radius: 50px;
+    padding: 5px;
+    font-size: small;
+    margin-top: 10px;
+
+
+}
+
 .community-header {
     background-color: var(--post_bg_color);
     width: 100%;
@@ -1059,6 +1150,22 @@ button {
 
 
 @media (max-width:500px) {
+
+    .sidebar {
+        display: none;
+    }
+
+    .posts-timeline {
+        /* width: 80%;
+        margin: auto; */
+    }
+
+    .posts-timeline ul {
+        /* margin-block-start: 0;
+        margin-block-end: 0; */
+        padding-inline-start: 0;
+    }
+
     .sidebar-left {
         display: none;
     }
@@ -1077,7 +1184,7 @@ button {
         display: block;
     }
 } */
-
+/* 
 @media (min-width:501px) {
     .navbar-contents a {
         font-size: x-large;
@@ -1090,4 +1197,4 @@ button {
         color: aqua !important;
 
     }
-}
+} */
