--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/create_gamer_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/create_gamer_profile.html
@@ -8,20 +8,36 @@ Create Gamer Profile
 
 {% load crispy_forms_tags %}
 {% if user.is_authenticated %}
-<form action="" method="POST" enctype="multipart/form-data">
+<div id="currentuser">{{user.username}}</div>
+<form action="" method="POST" enctype="multipart/form-data" id="gamerprofile_form">
     <h1>Create your Gamer Profile!!</h1>
     {% csrf_token %}
-    {{ form.as_p }}
-    <div class="post_form">
-        {{ post_form}}
+
+    <div class="profile-item">
+        <div> Preferred Game</div>
+        <div class="game">{{form.game}}</div>
     </div>
-    <button type="submit">Post</button>
+    <div class="profile-item">
+        <div> Preferred Server</div>
+        <select class="servers" form="gamerprofile_form"></select>
+    </div>
+    <div class="profile-item">
+        <div> Current Rank</div>
+        <select class="ranks" form="gamerprofile-form">Enter current rank</select>
+    </div>
+    <div class="profile-item">
+        <label for="is_main"> Is this your main gamer profile</label><br>
+        <input type="checkbox" id="is_main" name="is_main">
+    </div>
+    <button type="submit" name="submit-btn">Create</button>
     {{user.username}}
 
 </form>
 
 <input type="checkbox" name="is_post" id="is_post">Post it for your followers to see!
-
+<div class="post_form">
+    <input type="text" name="post_body" id="post_body">
+</div>
 
 <!-- <form  action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -46,6 +62,58 @@ Login first!
             $(".post_form").hide();
         }
     })
+    $('.game').click(function () {
+        var pref_game = $('.game select').val();
+        console.log(pref_game);
+
+        $.ajax({
+            type: 'GET',
+            url: `/getgamerank_server/${pref_game}`,
+            success: function (response) {
+                $('.servers').empty();
+                for (let i = 0; i < response['servers'].length; i++) {
+                    $('.servers').append(`<option>${response['servers'][i][0]}</option>`)
+                }
+
+                $('.ranks').empty();
+                for (let i = 0; i < response['ranks'].length; i++) {
+                    $('.ranks').append(`<option>${response['ranks'][i][0]}</option>`)
+                }
+            }
+        })
+    })
+    let is_main = false;
+    $('#is_main').click(function () {
+
+        if ($(this).is(":checked")) {
+            is_main = true;
+        }
+        else is_main = false;
+        console.log(is_main);
+    })
+
+    $(document).on('submit', '#gamerprofile_form', function (e) {
+        e.preventDefault();
+        var pref_game = $('.game select').val();
+        var user_name = $('#currentuser').text();
+        console.log(user_name, pref_game);
+        $.ajax({
+            type: 'POST',
+            url: `/create_gamer_profile/${user_name}`,
+            data: {
+                game: pref_game,
+                rank: $('.ranks').val(),
+                server: $('.servers').val(),
+                body: $('#post_body').val(),
+                is_main: is_main,
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+            },
+            success: function (response) {
+                console.log("Success");
+            }
+        })
+    })
+
 </script>
 
 
